Finally got the ui-router running

--- a/client/scripts/episodes/views/home.html
+++ b/client/scripts/episodes/views/home.html
@@ -1,6 +1,1 @@
-<ion-view title="Home">
-  <ion-content padding="true">
-    <h2>Home Page</h2>
-    <p>Here's the main route for the app.</p>
-  </ion-content>
-</ion-view>
+<h2 ng-controller="main.episodes.trending as trendingCtrl">{{trendingCtrl.message}}</h2>
