--- a/client/scripts/episodes/views/home.html
+++ b/client/scripts/episodes/views/home.html
@@ -1,1 +1,9 @@
-<h2>{{trendingCtrl.message}}</h2>
+<ion-view title="Home">
+  <ion-content>
+    <ion-list>
+      <ion-item> {{message}} </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-view>
+
+
