Added show route - not working yet.

--- a/client/scripts/episodes/views/episodes.html
+++ b/client/scripts/episodes/views/episodes.html
@@ -1,3 +1,11 @@
-<h2>All of the episodes</h2>
-<p>episodes?</p>
-<div>{{message}}</div>
+<ion-view title="Episodes">
+  <ion-content>
+    <ion-list>
+      <ion-item ng-repeat="episode in episodes" ui-sref='episode.show({episodeId: episode.slug})'>
+	{{episode.title}} 
+	</ion-nav-view>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+</ion-view>
+
